--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -2,7 +2,7 @@
 /*  HOMPAGE 01
 /*----------------------------------------*/
 .header-area {
-  padding: 20px 0px;
+  padding: 25px 0px;
   position: relative;
 
   .main-menu {
@@ -90,6 +90,7 @@
     display: flex;
     align-items: center;
 
+    // Search icon
     .search-bar {
       cursor: pointer;
       border: 1px solid #ffdee4;
@@ -98,7 +99,7 @@
       line-height: 64px;
       border-radius: 50%;
       text-align: center;
-      margin-right: 30px;
+      margin-right: 32px;
     }
 
     .contact-number {
